add social links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,6 +39,8 @@ let author = "Long Nhat Nguyen";
     <meta name="twitter:image" content={new URL(banner, Astro.url)}>
     <meta name="twitter:site" content="@torn4dom4n">
     <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
 
   <body class="bg-black text-white">
@@ -68,7 +70,13 @@ let author = "Long Nhat Nguyen";
               <span class="font-semibold">A man who loves open source and music</span>
             </h2>
             <p class="text-gray-400 mb-16">
-              If we'll ever be remembered, I know it'll be for the way that we love.
+              If we'll ever be remembered, I know it'll be for the way that we love.<br>
+            </p>
+            <p class="justify-center">
+              <a href="https://github.com/torn4dom4n"><i class="fa-brands fa-github text-3xl pr-2 text-gray-400 hover:text-gray-200"></i></a>
+              <a href="https://facebook.com/torn4dom4n"><i class="fa-brands fa-facebook text-3xl pr-2 text-gray-400 hover:text-gray-200"></i></a>
+              <a href="https://twitter.com/torn4dom4n"><i class="fa-brands fa-twitter text-3xl pr-2 text-gray-400 hover:text-gray-200"></i></a>
+              <a href="https://youtube.com/@torn4dom4n"><i class="fa-brands fa-youtube text-3xl pr-2 text-gray-400 hover:text-gray-200"></i></a>
             </p>
           </div>
           <div class="w-[80px] sm:w-[176px] relative mb-8 sm:mb-0 mr-auto">
