add font family

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,6 @@
 ---
+import "@fontsource/iosevka";
+
 let title = "Long Nhat Nguyen - Home";
 let description = "Welcome to Long Nhat Nguyen's home";
 let banner = "https://torn4dom4n.github.io/banner.png";
@@ -52,7 +54,7 @@ let author = "Long Nhat Nguyen";
     <div class="flex flex-col px-8">
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
         <a href="#">
-          <img alt="logo" src="/favicon.ico" class="w-9 h-9 rounded-lg" />
+          <img alt="logo" src="/favicon.ico" class="w-[48px] h-[48px] rounded-lg" />
         </a>
       </nav>
     </div>
@@ -73,11 +75,11 @@ let author = "Long Nhat Nguyen";
               love.<br />
             </p>
           </div>
-          <div class="w-[96px] sm:w-[176px] mb-4">
+          <div class="mb-2">
             <img
               alt="Long Nhat Nguyen"
               src="/avatar.jpg"
-              class="rounded-full"
+              class="w-[96px] sm:w-[176px] rounded-full"
             />
           </div>
         </div>
@@ -90,17 +92,17 @@ let author = "Long Nhat Nguyen";
           </a>
           <a href="https://facebook.com/torn4dom4n">
             <i
-              class="fa-brands fa-facebook text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-gray-200"
+              class="fa-brands fa-facebook text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-blue-700"
             ></i>
           </a>
           <a href="https://twitter.com/torn4dom4n">
             <i
-              class="fa-brands fa-twitter text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-gray-200"
+              class="fa-brands fa-twitter text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-blue-500"
             ></i>
           </a>
           <a href="https://youtube.com/@torn4dom4n">
             <i
-              class="fa-brands fa-youtube text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-gray-200"
+              class="fa-brands fa-youtube text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-red-700"
             ></i>
           </a>
         </div>
