--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,7 +55,7 @@ let author = "Long Nhat Nguyen";
     <div class="flex flex-col px-8">
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
         <a href="#">
-          <img alt="logo" src="/favicon.ico" class="w-[48px] h-[48px] rounded-lg" />
+          <img alt="logo" src="logo.png" class="w-[48px] h-[48px] rounded-lg" />
         </a>
       </nav>
     </div>
