--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/base.css";
+import { Image } from "@astrojs/image/components";
+import { Icon } from "astro-icon";
 
 let title = "Long Nhat Nguyen - Home";
 let description = "Welcome to Long Nhat Nguyen's home";
@@ -43,7 +45,13 @@ let author = "Long Nhat Nguyen";
     <meta name="twitter:site" content="@torn4dom4n" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="preload" href="fonts/Mona-Sans.woff2" as="font" type="font/woff2" crossorigin>
+    <link
+      rel="preload"
+      href="fonts/Mona-Sans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -55,7 +63,14 @@ let author = "Long Nhat Nguyen";
     <div class="flex flex-col px-8">
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
         <a href="#">
-          <img alt="logo" src="logo.png" class="w-[48px] h-[48px] rounded-lg" />
+          <Image
+            src="logo.png"
+            alt="Logo"
+            width={480}
+            aspectRatio="1:1"
+            format={"webp"}
+            class="w-[48px] rounded-lg"
+          />
         </a>
       </nav>
     </div>
@@ -77,34 +92,66 @@ let author = "Long Nhat Nguyen";
             </p>
           </div>
           <div class="mb-2">
-            <img
+            <Image
+              src="me.jpg"
               alt="Long Nhat Nguyen"
-              src="/avatar.jpg"
-              class="w-[96px] sm:w-[176px] rounded-full"
+              width={720}
+              aspectRatio="1:1"
+              format={"webp"}
+              class="w-[144px] sm:w-[196px] rounded-full"
             />
           </div>
         </div>
 
-        <div class="py-2">
-          <a href="https://github.com/torn4dom4n">
-            <i
-              class="fa-brands fa-github text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-gray-200"
-            ></i>
+        <div class="flex items-center gap-1">
+          <a href="mailto:torn4dom4n@gmailc.com" target="_blank" title="Gmail">
+            <Icon
+              pack="tabler"
+              name="brand-gmail"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
           </a>
-          <a href="https://facebook.com/torn4dom4n">
-            <i
-              class="fa-brands fa-facebook text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-blue-700"
-            ></i>
+          <a href="https://github.com/torn4dom4n" target="_blank" title="GitHub">
+            <Icon
+              pack="tabler"
+              name="brand-github"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
           </a>
-          <a href="https://twitter.com/torn4dom4n">
-            <i
-              class="fa-brands fa-twitter text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-blue-500"
-            ></i>
+          <a href="https://facebook.com/torn4dom4n" target="_blank" title="Facebook">
+            <Icon
+              pack="tabler"
+              name="brand-facebook"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
           </a>
-          <a href="https://youtube.com/@torn4dom4n">
-            <i
-              class="fa-brands fa-youtube text-2xl sm:text-3xl pr-2 text-gray-400 hover:text-red-700"
-            ></i>
+          <a href="https://instagram.com/torn4dom4n" target="_blank" title="Instagram">
+            <Icon
+              pack="tabler"
+              name="brand-instagram"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
+          </a>
+          <a href="https://twitter.com/torn4dom4n" target="_blank" title="Twitter">
+            <Icon
+              pack="tabler"
+              name="brand-twitter"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
+          </a>
+          <a href="https://youtube.com/@torn4dom4n" target="_blank" title="YouTube">
+            <Icon
+              pack="tabler"
+              name="brand-youtube"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
+          </a>
+          <a href="https://www.linkedin.com/in/torn4dom4n" target="_blank" title="linkedin">
+            <Icon
+              pack="tabler"
+              name="brand-linkedin"
+              class="w-[36px] text-gray-400 hover:text-gray-200"
+            />
           </a>
         </div>
       </div>
