--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ let author = "Long Nhat Nguyen";
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
         <a href="#">
           <Image
-            src="logo.png"
+            src={import('../assets/logo.png')}
             alt="Logo"
             width={480}
             aspectRatio="1:1"
@@ -93,7 +93,7 @@ let author = "Long Nhat Nguyen";
           </div>
           <div class="mb-2">
             <Image
-              src="me.jpg"
+              src={import('../assets/me.jpg')}
               alt="Long Nhat Nguyen"
               width={720}
               aspectRatio="1:1"
