remove font-awesome

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,17 +45,7 @@ let author = "Long Nhat Nguyen";
     <meta name="twitter:site" content="@torn4dom4n" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link
-      rel="preload"
-      href="fonts/Mona-Sans.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
+    <link rel="preload" href="fonts/Mona-Sans.woff2" as="font" type="font/woff2" crossorigin />
   </head>
 
   <body class="bg-black text-white">
