--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,17 +45,7 @@ let author = "Long Nhat Nguyen";
     <meta name="twitter:site" content="@torn4dom4n" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link
-      rel="preload"
-      href="fonts/Mona-Sans.woff2"
-      as="font"
-      type="font/woff2"
-      crossorigin
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
+    <link rel="preload" href="fonts/Mona-Sans.woff2" as="font" type="font/woff2" crossorigin />
   </head>
 
   <body class="bg-black text-white">
@@ -64,7 +54,7 @@ let author = "Long Nhat Nguyen";
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
         <a href="#">
           <Image
-            src="logo.png"
+            src={import('../assets/logo.png')}
             alt="Logo"
             width={480}
             aspectRatio="1:1"
@@ -93,7 +83,7 @@ let author = "Long Nhat Nguyen";
           </div>
           <div class="mb-2">
             <Image
-              src="me.jpg"
+              src={import('../assets/me.jpg')}
               alt="Long Nhat Nguyen"
               width={720}
               aspectRatio="1:1"
