--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import { Icon } from "astro-icon";
 
 let title = "Long Nhat Nguyen - Home";
 let description = "Welcome to Long Nhat Nguyen's home";
-let banner = "https://torn4dom4n.github.io/banner.png";
+let banner = "banner.png";
 let author = "Long Nhat Nguyen";
 ---
 
