--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,67 +1,62 @@
 ---
-import "../styles/base.css";
+import "../styles/global.css";
 import { Image } from "@astrojs/image/components";
 import { Icon } from "astro-icon";
 
 let title = "Long Nhat Nguyen - Home";
 let description = "Welcome to Long Nhat Nguyen's home";
-let banner = "banner.png";
+let og = "og.png";
 let author = "Long Nhat Nguyen";
 ---
 
 <html lang="en">
   <head>
-    <!-- Global Metadata -->
     <meta charset="utf-8" />
+    <meta name="robots" content="index, follow" />
+    <meta
+      name="googlebot"
+      content="index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1"
+    />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="robots" content="follow, index" />
     <meta name="generator" content={Astro.generator} />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5" />
-    <meta name="msapplication-TileColor" content="#da532c" />
-    <meta name="theme-color" content="#ffffff" />
-
-    <!-- Primary Meta Tags -->
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>{title}</title>
     <meta name="title" content={title} />
     <meta name="description" content={description} />
     <meta name="author" content={author} />
-
-    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content={Astro.url} />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
-    <meta property="og:image" content={new URL(banner, Astro.url)} />
-
-    <!-- Twitter -->
+    <meta property="og:image" content={new URL(og, Astro.url)} />
     <meta name="twitter:url" content={Astro.url} />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
-    <meta name="twitter:image" content={new URL(banner, Astro.url)} />
+    <meta name="twitter:image" content={new URL(og, Astro.url)} />
     <meta name="twitter:site" content="@torn4dom4n" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="preload" href="fonts/Mona-Sans.woff2" as="font" type="font/woff2" crossorigin />
+    <link
+      rel="preload"
+      href="fonts/Mona-Sans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
   </head>
 
   <body class="bg-black text-white">
     <!--Header -->
     <div class="flex flex-col px-8">
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
-        <a href="#">
-          <Image
-            src={import('../assets/logo.png')}
-            alt="Logo"
-            width={480}
-            aspectRatio="1:1"
-            format={"webp"}
-            class="w-[48px] rounded-lg"
-          />
-        </a>
+        <Image
+          src={import("../assets/logo.png")}
+          alt="Logo"
+          width={480}
+          aspectRatio="1:1"
+          format={"webp"}
+          class="w-[48px] rounded-lg"
+        />
       </nav>
     </div>
 
@@ -83,7 +78,7 @@ let author = "Long Nhat Nguyen";
           </div>
           <div class="mb-2">
             <Image
-              src={import('../assets/me.jpg')}
+              src={import("../assets/me.jpg")}
               alt="Long Nhat Nguyen"
               width={720}
               aspectRatio="1:1"
@@ -94,53 +89,77 @@ let author = "Long Nhat Nguyen";
         </div>
 
         <div class="flex items-center gap-1">
-          <a href="mailto:torn4dom4n@gmailc.com" target="_blank" title="Gmail">
+          <a href="mailto:torn4dom4n@gmail.com" target="_blank" title="Gmail">
             <Icon
               pack="tabler"
               name="brand-gmail"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#ea4335] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
-          <a href="https://github.com/torn4dom4n" target="_blank" title="GitHub">
+          <a
+            href="https://github.com/torn4dom4n"
+            target="_blank"
+            title="GitHub"
+          >
             <Icon
               pack="tabler"
               name="brand-github"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#fafafa] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
-          <a href="https://facebook.com/torn4dom4n" target="_blank" title="Facebook">
+          <a
+            href="https://facebook.com/torn4dom4n"
+            target="_blank"
+            title="Facebook"
+          >
             <Icon
               pack="tabler"
               name="brand-facebook"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#1877f2] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
-          <a href="https://instagram.com/torn4dom4n" target="_blank" title="Instagram">
+          <a
+            href="https://instagram.com/torn4dom4n"
+            target="_blank"
+            title="Instagram"
+          >
             <Icon
               pack="tabler"
               name="brand-instagram"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#fd1d1d] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
-          <a href="https://twitter.com/torn4dom4n" target="_blank" title="Twitter">
+          <a
+            href="https://twitter.com/torn4dom4n"
+            target="_blank"
+            title="Twitter"
+          >
             <Icon
               pack="tabler"
               name="brand-twitter"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#1da1f2] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
-          <a href="https://youtube.com/@torn4dom4n" target="_blank" title="YouTube">
+          <a
+            href="https://youtube.com/@torn4dom4n"
+            target="_blank"
+            title="YouTube"
+          >
             <Icon
               pack="tabler"
               name="brand-youtube"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#ff0000] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
-          <a href="https://www.linkedin.com/in/torn4dom4n" target="_blank" title="linkedin">
+          <a
+            href="https://www.linkedin.com/in/torn4dom4n"
+            target="_blank"
+            title="linkedin"
+          >
             <Icon
               pack="tabler"
               name="brand-linkedin"
-              class="w-[36px] text-gray-400 hover:text-gray-200"
+              class="transition w-[36px] text-gray-400 hover:text-[#0a66c2] hover:-translate-y-1 hover:scale-110 duration-150"
             />
           </a>
         </div>
@@ -150,7 +169,8 @@ let author = "Long Nhat Nguyen";
       <footer class="items-start w-full max-w-2xl mx-auto">
         <hr class="border-1 border-gray-800 mb-8" />
         <p class="capsize text-gray-200">
-          Made with 💖 by <strong>Long Nhat Nguyen</strong>
+          made with 💖 by {" "}
+          <strong>Long Nhat Nguyen</strong>
         </p>
       </footer>
     </main>
