--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,8 +45,7 @@ let author = "Long Nhat Nguyen";
     />
   </head>
 
-  <body class="bg-black text-white">
-    <!--Header -->
+  <body class="bg-black antialiased">
     <div class="flex flex-col px-8">
       <nav class="max-w-2xl mx-auto pt-8 pb-8">
         <Image
@@ -60,18 +59,17 @@ let author = "Long Nhat Nguyen";
       </nav>
     </div>
 
-    <!--Content -->
-    <main class="flex flex-col px-6">
+    <main class="flex flex-col px-6 text-white/80">
       <div class="items-start max-w-2xl mx-auto py-16">
         <div class="flex flex-col-reverse sm:flex-row py-2">
           <div class="pr-8">
             <h1 class="font-bold text-2xl sm:text-3xl">
               Hi 👋, I'm Long Nhat Nguyen
             </h1>
-            <h2 class="font-semibold text-gray-200">
+            <h2 class="font-semibold text-white/75">
               I love music 🎵 and photography 📸
             </h2>
-            <p class="text-gray-400">
+            <p class="text-white/70">
               If we'll ever be remembered, I know it'll be for the way that we
               love.<br />
             </p>
@@ -165,7 +163,6 @@ let author = "Long Nhat Nguyen";
         </div>
       </div>
 
-      <!--Footer -->
       <footer class="items-start w-full max-w-2xl mx-auto">
         <hr class="border-1 border-gray-800 mb-8" />
         <p class="capsize text-gray-200">
