--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,13 +1,13 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
+import me from "../assets/logo.png";
 ---
 
 <div class="flex flex-col mx-auto pt-8 pb-8">
   <Image
-    src={import("../assets/logo.png")}
+    src={me}
     alt="Logo"
     width={480}
-    aspectRatio="1:1"
     format={"webp"}
     class="w-[48px] rounded-lg"
   />
