--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,15 +7,18 @@ import Footer from "../components/Footer.astro";
 interface Props {
   title?: string | undefined;
   description?: string | undefined;
-  author?: string | undefined;
-  og?: string | undefined;
 }
 
-const { title, description, author, og } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
-  <MainHead title={title} description={description} author={author} og={og} />
+  <MainHead
+    title={title}
+    description={description}
+    author={"Long Nhat Nguyen"}
+    og={"og.png"}
+  />
   <body class="bg-black antialiased">
     <main class="flex flex-col px-6 text-white/80">
       <Logo />
