--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -3,11 +3,9 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 let title = "404 - Not Found | Long Nhat Nguyen";
 let description = "Welcome to Long Nhat Nguyen's Home";
-let og = "og.png";
-let author = "Long Nhat Nguyen";
 ---
 
-<BaseLayout title={title} description={description} author={author} og={og}>
+<BaseLayout title={title} description={description}>
   <div class="items-start max-w-2xl mx-auto py-16">
     <div class="flex flex-col-reverse py-2">
       <div class="grid px-4 place-content-center">
