--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,11 +4,5 @@ import me from "../assets/logo.png";
 ---
 
 <div class="flex flex-col mx-auto pt-8 pb-8">
-  <Image
-    src={me}
-    alt="Logo"
-    width={480}
-    format={"webp"}
-    class="w-[48px] rounded-lg"
-  />
+  <Image src={me} alt="Logo" width={480} class="w-[48px] rounded-lg" />
 </div>
