--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,7 +18,8 @@ const { title, description, author, og } = Astro.props;
   />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="generator" content={Astro.generator} />
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" type="image/png" href="/favicon.ico" />
+  <link rel="sitemap" type="application/xml" href="/sitemap-index.xml">
   <title>{title}</title>
   <meta name="title" content={title} />
   <meta name="description" content={description} />
@@ -35,7 +36,7 @@ const { title, description, author, og } = Astro.props;
   <meta name="twitter:card" content="summary_large_image" />
   <link
     rel="preload"
-    href="fonts/Mona-Sans.woff2"
+    href="/fonts/Mona-Sans.woff2"
     as="font"
     type="font/woff2"
     crossorigin
