--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import MainHead from "../components/MainHead.astro";
+import BaseHead from "../components/BaseHead.astro";
 import Logo from "../components/Logo.astro";
 import Footer from "../components/Footer.astro";
 
@@ -13,7 +13,7 @@ const { title, description } = Astro.props;
 ---
 
 <html lang="en">
-  <MainHead
+  <BaseHead
     title={title}
     description={description}
     author={"Long Nhat Nguyen"}
