--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,74 @@
-<footer class="items-start w-full max-w-2xl mx-auto">
-  <hr class="border-1 border-white/80 mb-8" />
-  <p class="capsize text-white/75">
-    made with 💖 by {" "}
-    <strong>Long Nhat Nguyen</strong>
+---
+import Icon from "./Icon.astro";
+const currentYear = new Date().getFullYear();
+---
+
+<footer>
+  <div class="group">
+    <p>
+      Powwer by <a href="https://astro.build/">Astro</a>
+      <Icon icon="rocket-launch" size="1.2em" />
+    </p>
+    <p>&copy; {currentYear} Long Nhat Nguyen</p>
+  </div>
+  <p class="socials">
+    <a href="https://twitter.com/torn4dom4n"> Twitter</a>
+    <a href="https://github.com/torn4dom4n"> GitHub</a>
   </p>
 </footer>
+<style>
+  footer {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: auto;
+    padding: 3rem 2rem 3rem;
+    text-align: center;
+    color: var(--gray-400);
+    font-size: var(--text-sm);
+    border-top: 1px solid var(--gray-800);
+  }
+
+  footer a {
+    color: var(--gray-400);
+    text-decoration: 1px solid underline transparent;
+    text-underline-offset: 0.25em;
+    transition: text-decoration-color var(--theme-transition);
+  }
+
+  footer a:hover,
+  footer a:focus {
+    text-decoration-color: currentColor;
+  }
+
+  .group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .socials {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+
+  @media (min-width: 50em) {
+    footer {
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 2.5rem 5rem;
+    }
+
+    .group {
+      flex-direction: row;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+
+    .socials {
+      justify-content: flex-end;
+    }
+  }
+</style>
