--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Hero from "../components/Hero.astro";
 <BaseLayout>
   <div class="flex flex-col gap-20 lg:gap-48">
     <div
-      class="w-full max-w-[83rem] mx-auto px-[1.5rem] flex flex-col gap-8 lg:gap-20"
+      class="w-full max-w-[83rem] mx-auto px-6 flex flex-col gap-8 lg:gap-20"
     >
       <header
         class="flex flex-col items-center gap-8 sm:grid sm:grid-cols-[6fr_4fr] sm:gap-[3.75rem] sm:px-[2.5rem] pb-8"
@@ -20,15 +20,9 @@ import Hero from "../components/Hero.astro";
           width="480"
           height="620"
           src="/assets/portrait.jpg"
-          class="aspect-[5/4] object-cover object-top rounded-3xl sm:aspect-[3/4] sm:rounded-[4.5rem] shadow-hero"
+          class="aspect-[5/4] object-cover object-top rounded-3xl sm:aspect-[3/4] sm:rounded-[4.5rem] shadow-[var(--shadow-md)]"
         />
       </header>
     </div>
   </div>
 </BaseLayout>
-
-<style>
-  .shadow-hero {
-    box-shadow: var(--shadow-md);
-  }
-</style>
