--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,10 +2,59 @@
 const currentYear = new Date().getFullYear();
 ---
 
-<footer
-  class="flex flex-col gap-12 text-center text-[color:var(--gray-400)] text-sm border-t-[color:var(--gray-800)] mt-auto px-8 py-12 border-t border-solid sm:flex-row sm:justify-between sm:px-20 sm:py-10"
->
-  <div class="flex flex-col gap-2 sm:flex-row sm:gap-4 sm:flex-wrap;">
+<footer>
+  <div class="group">
     <p>&copy; {currentYear} Long Nhat Nguyen</p>
   </div>
+  <p class="socials">
+    <a href="https://github.com/torn4dom4n"> GitHub</a>
+  </p>
 </footer>
+<style>
+  footer {
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    margin-top: auto;
+    padding: 3rem 2rem 3rem;
+    text-align: center;
+    color: var(--gray-400);
+    font-size: var(--text-sm);
+  }
+  footer a {
+    color: var(--gray-400);
+    text-decoration: 1px solid underline transparent;
+    text-underline-offset: 0.25em;
+    transition: text-decoration-color var(--theme-transition);
+  }
+  footer a:hover,
+  footer a:focus {
+    text-decoration-color: currentColor;
+  }
+  .group {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  .socials {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+  @media (min-width: 50em) {
+    footer {
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 2.5rem 5rem;
+    }
+    .group {
+      flex-direction: row;
+      gap: 1rem;
+      flex-wrap: wrap;
+    }
+    .socials {
+      justify-content: flex-end;
+    }
+  }
+</style>
