--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -12,21 +12,42 @@ const {
 } = Astro.props;
 ---
 
-<meta charset="UTF-8" />
-<meta name="description" property="og:description" content={description} />
-<meta name="viewport" content="width=device-width" />
+<meta charset="utf-8" />
+<meta name="robots" content="index, follow" />
+<meta
+  name="googlebot"
+  content="index, follow, max-video-preview:-1, max-image-preview:large, max-snippet:-1"
+/>
+<meta name="viewport" content="width=device-width,initial-scale=1" />
 <meta name="generator" content={Astro.generator} />
+<link rel="shortcut icon" type="image/png" href="/favicon.ico" />
+<link rel="sitemap" type="application/xml" href="/sitemap-index.xml" />
 <title>{title}</title>
+<meta name="title" content={title} />
+<meta name="description" content={description} />
+<meta name="author" content="Long Nhat Nguyen" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content={Astro.url} />
+<meta property="og:title" content={title} />
+<meta property="og:description" content={description} />
+<meta property="og:image" content={new URL("og.png", Astro.url)} />
+<meta name="twitter:url" content={Astro.url} />
+<meta name="twitter:title" content={title} />
+<meta name="twitter:description" content={description} />
+<meta name="twitter:image" content={new URL("og.png", Astro.url)} />
+<meta name="twitter:card" content="summary_large_image" />
 
 <link rel="icon" type="image/png" href="/favicon.ico" />
-<link rel="preconnect" href="https://fonts.googleapis.com" />
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,400;0,700;1,400&family=Rubik:wght@500;600&display=swap"
-  rel="stylesheet"
+  rel="preload"
+  href="/fonts/Mona-Sans.woff2"
+  as="font"
+  type="font/woff2"
+  crossorigin
 />
 
 <script is:inline>
+  // This code is inlined in the head to make dark mode instant & blocking.
   const getThemePreference = () => {
     if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
       return localStorage.getItem("theme");
@@ -37,8 +58,8 @@ const {
   };
   const isDark = getThemePreference() === "dark";
   document.documentElement.classList[isDark ? "add" : "remove"]("theme-dark");
-
   if (typeof localStorage !== "undefined") {
+    // Watch the document element and persist user preference when it changes.
     const observer = new MutationObserver(() => {
       const isDark = document.documentElement.classList.contains("theme-dark");
       localStorage.setItem("theme", isDark ? "dark" : "light");
