--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -2,11 +2,13 @@
 import Icon, { Props as IconProps } from "./Icon.astro";
 import ThemeToggle from "./ThemeToggle.astro";
 
+/** Main menu items */
 const textLinks: { label: string; href: string }[] = [
   { label: "Home", href: "/" },
   { label: "Contact", href: "/contact/" },
 ];
 
+/** Icon links to social media */
 const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
   { label: "Twitter", href: "https://twitter.com/me", icon: "twitter-logo" },
   { label: "Twitch", href: "https://twitch.tv/me", icon: "twitch-logo" },
@@ -21,9 +23,7 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
 ];
 ---
 
-<nav
-  class="z-[9999] relative font-medium mb-[3.5rem] sm:grid sm:grid-cols-[1fr_auto_1fr] sm:py-[2.5rem] sm:px-[5rem] sm:items-center sm:gap-4"
->
+<nav>
   <div class="menu-header">
     <a href="/" class="site-title">
       <Icon
@@ -89,19 +89,24 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
   class MenuButton extends HTMLElement {
     constructor() {
       super();
+
       // Inject menu toggle button when JS runs.
       this.appendChild(this.querySelector("template")!.content.cloneNode(true));
       const btn = this.querySelector("button")!;
+
       // Hide menu (shown by default to support no-JS browsers).
       const menu = document.getElementById("menu-content")!;
       menu.hidden = true;
+
       /** Set whether the menu is currently expanded or collapsed. */
       const setExpanded = (expand: boolean) => {
         btn.setAttribute("aria-expanded", expand ? "true" : "false");
         menu.hidden = !expand;
       };
+
       // Toggle menu visibility when the menu button is clicked.
       btn.addEventListener("click", () => setExpanded(menu.hidden));
+
       // Hide menu button for large screens.
       const handleViewports = (e: MediaQueryList | MediaQueryListEvent) => {
         setExpanded(e.matches);
@@ -117,7 +122,11 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
 
 <style>
   nav {
+    z-index: 9999;
+    position: relative;
     font-family: var(--font-brand);
+    font-weight: 500;
+    margin-bottom: 3.5rem;
   }
 
   .menu-header {
@@ -236,6 +245,14 @@ const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
   }
 
   @media (min-width: 50em) {
+    nav {
+      display: grid;
+      grid-template-columns: 1fr auto 1fr;
+      align-items: center;
+      padding: 2.5rem 5rem;
+      gap: 1rem;
+    }
+
     .menu-header {
       padding: 0;
     }
