--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -3,7 +3,7 @@ import Icon from "./Icon.astro";
 ---
 
 <theme-toggle>
-  <button class="flex border-0 rounded-[999rem] p-0 cursor-pointer">
+  <button>
     <span class="sr-only">Dark theme</span>
     <span class="icon light"><Icon icon="sun" /></span>
     <span class="icon dark"><Icon icon="moon-stars" /></span>
@@ -12,10 +12,14 @@ import Icon from "./Icon.astro";
 
 <style>
   button {
+    display: flex;
+    border: 0;
+    border-radius: 999rem;
+    padding: 0;
     background-color: var(--gray-999);
     box-shadow: inset 0 0 0 1px var(--accent-overlay);
+    cursor: pointer;
   }
-
   .icon {
     z-index: 1;
     position: relative;
@@ -26,7 +30,6 @@ import Icon from "./Icon.astro";
     font-size: 1rem;
     color: var(--accent-overlay);
   }
-
   .icon.light::before {
     content: "";
     z-index: -1;
@@ -35,17 +38,14 @@ import Icon from "./Icon.astro";
     background-color: var(--accent-regular);
     border-radius: 999rem;
   }
-
   :global(.theme-dark) .icon.light::before {
     transform: translateX(100%);
   }
-
   :global(.theme-dark) .icon.dark,
   :global(html:not(.theme-dark)) .icon.light,
   button[aria-pressed="false"] .icon.light {
     color: var(--accent-text-over);
   }
-
   @media (prefers-reduced-motion: no-preference) {
     .icon,
     .icon.light::before {
@@ -53,7 +53,6 @@ import Icon from "./Icon.astro";
         color var(--theme-transition);
     }
   }
-
   @media (forced-colors: active) {
     .icon.light::before {
       background-color: SelectedItem;
