--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,13 +16,14 @@ const { title, description } = Astro.props;
     <MainHead title={title} description={description} />
   </head>
   <body>
-    <div class="flex flex-col min-h-full isolate backgrounds">
+    <div class="stack backgrounds">
       <Nav />
       <slot />
       <Footer />
     </div>
 
     <script>
+      // Add “loaded” class once the document has completely loaded.
       addEventListener("load", () =>
         document.documentElement.classList.add("loaded")
       );
@@ -33,8 +34,6 @@ const { title, description } = Astro.props;
         --_placeholder-bg: linear-gradient(transparent, transparent);
         --bg-image-main: url("/assets/backgrounds/bg-main-light-800w.jpg");
         --bg-image-main-curves: url("/assets/backgrounds/bg-main-light.svg");
-        --bg-image-subtle-1: var(--_placeholder-bg);
-        --bg-image-subtle-2: var(--_placeholder-bg);
         --bg-image-footer: var(--_placeholder-bg);
         --bg-svg-blend-mode: overlay;
         --bg-blend-mode: darken;
@@ -51,14 +50,12 @@ const { title, description } = Astro.props;
         --bg-blend-mode: lighten;
       }
 
+      /* These backgrounds are displayed below the fold, so we lazy load them
+			   once the `.loaded` class has been set.  */
       :root.loaded {
-        --bg-image-subtle-1: url("/assets/backgrounds/bg-subtle-1-light-800w.jpg");
-        --bg-image-subtle-2: url("/assets/backgrounds/bg-subtle-2-light-800w.jpg");
         --bg-image-footer: url("/assets/backgrounds/bg-footer-light-800w.jpg");
       }
       :root.loaded.theme-dark {
-        --bg-image-subtle-1: url("/assets/backgrounds/bg-subtle-1-dark-800w.jpg");
-        --bg-image-subtle-2: url("/assets/backgrounds/bg-subtle-2-dark-800w.jpg");
         --bg-image-footer: url("/assets/backgrounds/bg-footer-dark-800w.jpg");
       }
 
@@ -72,28 +69,32 @@ const { title, description } = Astro.props;
         }
 
         :root.loaded {
-          --bg-image-subtle-1: url("/assets/backgrounds/bg-subtle-1-light-1440w.jpg");
-          --bg-image-subtle-2: url("/assets/backgrounds/bg-subtle-2-light-1440w.jpg");
           --bg-image-footer: url("/assets/backgrounds/bg-footer-light-1440w.jpg");
         }
         :root.loaded.theme-dark {
-          --bg-image-subtle-1: url("/assets/backgrounds/bg-subtle-1-dark-1440w.jpg");
-          --bg-image-subtle-2: url("/assets/backgrounds/bg-subtle-2-dark-1440w.jpg");
           --bg-image-footer: url("/assets/backgrounds/bg-footer-dark-1440w.jpg");
         }
       }
 
       .backgrounds {
-        background: url("/assets/backgrounds/noise.png") top center/220px repeat,
-          var(--bg-image-footer) bottom center/var(--bg-gradient-size) no-repeat,
-          var(--bg-image-main-curves) top center/var(--bg-gradient-size)
+        min-height: 100%;
+        isolation: isolate;
+        background:
+					/*noise*/ url("/assets/backgrounds/noise.png") top
+            center/220px repeat,
+          /*footer*/ var(--bg-image-footer) bottom
+            center/var(--bg-gradient-size) no-repeat,
+          /*header1*/ var(--bg-image-main-curves) top
+            center/var(--bg-gradient-size) no-repeat,
+          /*header2*/ var(--bg-image-main) top center/var(--bg-gradient-size)
             no-repeat,
-          var(--bg-image-main) top center/var(--bg-gradient-size) no-repeat,
-          var(--gray-999);
-        background-blend-mode: overlay, var(--bg-blend-mode),
-          var(--bg-svg-blend-mode), normal;
+          /*base*/ var(--gray-999);
+        background-blend-mode: /*noise*/ overlay,
+          /*footer*/ var(--bg-blend-mode), /*header1*/ var(--bg-svg-blend-mode),
+          /*header2*/ normal, /*base*/ normal;
       }
       @media (forced-colors: active) {
+        /* Deactivate custom backgrounds for high contrast users. */
         .backgrounds {
           background: none;
           background-blend-mode: none;
