--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -16,6 +16,7 @@ const currentYear = new Date().getFullYear();
     flex-direction: column;
     gap: 3rem;
     margin-top: auto;
+    border-top: 1px solid var(--gray-800);
     padding: 3rem 2rem 3rem;
     text-align: center;
     color: var(--gray-400);
