--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,15 +10,35 @@ const textLinks: { label: string; href: string }[] = [
 
 /** Icon links to social media */
 const iconLinks: { label: string; href: string; icon: IconProps["icon"] }[] = [
-  { label: "Twitter", href: "https://twitter.com/me", icon: "twitter-logo" },
-  { label: "Twitch", href: "https://twitch.tv/me", icon: "twitch-logo" },
-  { label: "GitHub", href: "https://github.com/me", icon: "github-logo" },
-  { label: "CodePen", href: "https://codepen.io/me", icon: "codepen-logo" },
-  { label: "dribbble", href: "https://dribbble.com/me", icon: "dribbble-logo" },
+  {
+    label: "GitHub",
+    href: "https://github.com/torn4dom4n",
+    icon: "github-logo",
+  },
+  {
+    label: "Twitter",
+    href: "https://twitter.com/torn4dom4n",
+    icon: "twitter-logo",
+  },
+  {
+    label: "Facebook",
+    href: "https://facebook.com/torn4dom4n",
+    icon: "facebook-logo",
+  },
+  {
+    label: "Instagram",
+    href: "https://instagram.com/torn4dom4n",
+    icon: "instagram-logo",
+  },
   {
     label: "YouTube",
-    href: "https://www.youtube.com/@me/",
+    href: "https://www.youtube.com/@torn4dom4n",
     icon: "youtube-logo",
+  },
+  {
+    label: "LinkedIn",
+    href: "https://www.linkedin.com/in/torn4dom4n",
+    icon: "linkedin-logo",
   },
 ];
 ---
