--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,6 +27,7 @@ import Hero from "../components/Hero.astro";
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 1.25rem;
     gap: 2rem;
   }
   .roles {
