use mailto as contact

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -7,7 +7,7 @@ import Logo from "../assets/logo.png";
 /** Main menu items */
 const textLinks: { label: string; href: string }[] = [
   { label: "Home", href: "/" },
-  { label: "Contact", href: "/contact/" },
+  { label: "Contact", href: "mailto:torn4dom4n@gmail.com" },
 ];
 
 /** Icon links to social media */
