high quality image & change color

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,10 +24,10 @@
   --gray-999_40: hsla(var(--gray-999-basis), 0.4);
   --gray-999: #ffffff;
 
-  --accent-light: #c561f6;
-  --accent-regular: #7611a6;
+  --accent-light: #7761f6;
+  --accent-regular: #2011a6;
   --accent-dark: #1c0056;
-  --accent-overlay: hsla(280, 89%, 67%, 0.33);
+  --accent-overlay: hsla(244, 89%, 67%, 0.33);
   --accent-subtle-overlay: var(--accent-overlay);
   --accent-text-over: var(--gray-999);
 
@@ -100,10 +100,10 @@
   --gray-999: #090b11;
 
   --accent-light: #1c0056;
-  --accent-regular: #7611a6;
-  --accent-dark: #c561f6;
-  --accent-overlay: hsla(280, 89%, 67%, 0.33);
-  --accent-subtle-overlay: hsla(281, 81%, 36%, 0.33);
+  --accent-regular: #2711a6;
+  --accent-dark: #7c61f6;
+  --accent-overlay: hsla(239, 89%, 67%, 0.33);
+  --accent-subtle-overlay: hsla(249, 81%, 36%, 0.33);
   --accent-text-over: var(--gray-0);
 
   --link-color: var(--accent-dark);
